<resources>
    <string name="global_app_name">Orienti</string>
    <string name="global_confirm">Confirm</string>
    <string name="global_synchronize">Synchronize</string>
    <string name="global_started">Started</string>
    <string name="global_elapsed">Elapsed</string>
    <string name="global_since_last_control_point">Since last point</string>
    <string name="global_training_name">Training name</string>
    <string name="global_new_training">New training</string>
    <string name="global_control_point_name">Control point name</string>
    <string name="global_track_name">Track name</string>
    <string name="global_new_track">New track</string>
    <string name="global_new_control_point">New control point</string>
    <string name="global_control_point_code">Code</string>

    <string name="menu_new_run">New run</string>
    <string name="menu_change_name">Change name</string>
    <string name="menu_change_mode">Change mode</string>

    <string name="activity_main_trainer_label">Trainer</string>
    <string name="activity_main_trainer_trainings">Trainings</string>
    <string name="activity_main_trainer_tracks">Tracks</string>
    <string name="activity_main_trainer_control_points">Control points</string>

    <string name="activity_main_runner_label">Runner</string>
    <string name="activity_main_runner_scanned_in_format">Scanned in %s</string>

    <string name="activity_set_name_label">Setting name</string>
    <string name="activity_set_name_your_name">Your new name</string>

    <string name="activity_control_points_selection_label">Select control points</string>

    <string name="activity_control_point_detail_print_job">Tlač kontrolného bodu</string>

    <string name="validation_enter_valid_name">Please enter valid name</string>
    <string name="validation_enter_valid_code">Please enter valid code</string>
    <string name="menu_scan_control_point">Scan control point</string>
    <string name="menu_scan_run">Scan run</string>
    <string name="control_point_finish_code">FINISH</string>
    <string name="control_point_finish_name">FINISH</string>
    <string name="global_finished">Finished</string>
</resources>