<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_trainer_bottom_navigation_trainings">

    <fragment
        android:id="@id/menu_trainer_bottom_navigation_trainings"
        android:name="app.orienti.android.ui.screens.trainer.main.trainings.TrainingsFragment"
        android:label="@string/activity_main_trainer_trainings"
        tools:layout="@layout/fragment_trainings" />

    <fragment
        android:id="@id/menu_trainer_bottom_navigation_tracks"
        android:name="app.orienti.android.ui.screens.trainer.main.tracks.TracksFragment"
        android:label="@string/activity_main_trainer_tracks"
        tools:layout="@layout/fragment_control_points" />

    <fragment
        android:id="@id/menu_trainer_bottom_navigation_control_points"
        android:name="app.orienti.android.ui.screens.trainer.main.control_points.ControlPointsFragment"
        android:label="@string/activity_main_trainer_control_points"
        tools:layout="@layout/fragment_settings" />
</navigation>