<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_screen_16_dp"
    android:gravity="center">

    <Button
        android:id="@+id/synchronize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_10_dp"
        app:icon="@drawable/ic_baseline_run"
        android:text="@string/global_synchronize"/>

    <Button
        android:id="@+id/change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_10_dp"
        app:icon="@drawable/ic_baseline_run"
        android:text="@string/menu_change_name"/>

    <Button
        android:id="@+id/change_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_10_dp"
        app:icon="@drawable/ic_baseline_run"
        android:text="@string/menu_change_mode"/>

</LinearLayout>